# SensorGateway

./: .gitignore  .gitlab-ci.yml  AWLMessages.json  CMakeLists.txt  Dockerfile  README.md  SensorGatewayConfig.cmake.in  SpiritSensorGatewayConfig.cmake.in  SpiritSensorGatewayConfigVersion.cmake.in  required-packages.md
lib/uWS/: CMakeLists.txt
live/: CMakeLists.txt
sensor-gateway/: CMakeLists.txt  conanfile.txt  config.h.in
sensor-gateway/application/: AWL16AccessLink.cpp  AWL16AccessLink.h  EVAL_ADAL6110_16_AccessLink.h  GuardianAccessLink.h  SensorAccessLink.hpp  SensorAccessLinkManager.hpp  TBDSensorNameAccessLink.h
sensor-gateway/common/: ConstantFunctionsDefinition.h  ConstantValuesDefinition.h  ExceptionMessages.h  StaticTupleFunctions.h  StringLiteralType.h  TimePointLocationNames.h  TypeDefinition.h
sensor-gateway/data-translation/: AWLTranslationStrategy.cpp  AWLTranslationStrategy.h  AWLTranslationStrategy.hpp  DataTranslationStrategy.hpp  DataTranslator.hpp  GuardianTranslationStrategy.cpp  GuardianTranslationStrategy.h  GuardianTranslationStrategy.hpp  TranslationErrorFactory.h  UnknownMessageException.cpp  UnknownMessageException.h
sensor-gateway/domain/: AWLMessage.h  GuardianMessage.cpp  GuardianMessage.h  Pixel.h  Track.h
sensor-gateway/message-translation/: AWLTranslationStrategy.cpp  AWLTranslationStrategy.h  MessageTranslationStrategy.hpp  MessageTranslator.hpp  UnknownMessageException.h
sensor-gateway/parameter-control/: SensorParameterController.hpp  SensorParameterErrorFactory.h
sensor-gateway/sensor-communication/: ConstantErrorCodeKvaser.h  GuardianUSBCommunicationStrategy.cpp  GuardianUSBCommunicationStrategy.h  GuardianUSBCommunicationStrategy.hpp  KvaserCanCommunicationStrategy.cpp  KvaserCanCommunicationStrategy.h  KvaserCanCommunicationStrategy.hpp  KvaserCommunicationError.cpp  KvaserCommunicationError.h  KvaserCommunicationErrorFactory.h  LibUSBCommunicationErrorFactory.h  LibUSBCommunicationStrategy.cpp  LibUSBCommunicationStrategy.h  SensorCommunicationStrategy.hpp  SensorCommunicator.hpp  TBDSensorNameUSBCommunicationStrategy.cpp  TBDSensorNameUSBCommunicationStrategy.h  WagnerUSBCommunicationStrategy.cpp  WagnerUSBCommunicationStrategy.h
sensor-gateway/server-communication/: RequestHandler.hpp  RequestHandlingErrorFactory.h  ResponseWriter.hpp  SensorRequest.hpp  ServerCommunicationPayloadTypes.hpp  ServerCommunicationStrategy.hpp  ServerCommunicator.hpp  ServerRequest.hpp  ServerRequestAssembler.hpp  ServerResponse.hpp  ServerResponseAssembler.hpp
spirit-sensor-gateway/: CMakeLists.txt  Dockerfile  conanfile.txt  config.h.in
spirit-sensor-gateway/application/: SensorAccessLink.hpp
spirit-sensor-gateway/application-messages-implementation/: MessageInterpretationStrategy.cpp  MessageInterpretationStrategy.h
spirit-sensor-gateway/common/: AbstractPointerArray.hpp  ConstantDefinition.h  ConstantFunction.h  ConstantFunctionsDefinition.h  ConstantSizedAbstractPointerArray.hpp  ConstantSizedPointerList.hpp  ConstantSizedPointerQueue.hpp  ConstantValuesDefinition.h  ConsumerLink.hpp  DataProcessingScheduler.hpp  DataSink.hpp  DataSource.h  DataSource.hpp  ExceptionMessages.h  RingBuffer.hpp  RingBufferPad.hpp  ThreadSafeRingBuffer.hpp  TypeDefinition.h
spirit-sensor-gateway/communication-protocol/: CommunicationProtocolStrategy.h  KvaserCanProtocolStrategy.h  SensorCommunicator.cpp  SensorCommunicator.h  SensorCommunicator.hpp
spirit-sensor-gateway/communication-protocol-strategy/: CommunicationProtocolStrategy.h  CommunicationProtocolStrategy.hpp  KvaserCanProtocolStrategy.cpp  KvaserCanProtocolStrategy.h
spirit-sensor-gateway/domain/: AWLMessage.cpp  AWLMessage.h  Frame.cpp  Frame.h  Message.h  Pixel.cpp  Pixel.h  SpiritFrame.cpp  SpiritFrame.h  SpiritPixel.cpp  SpiritPixel.h  SpiritTrack.cpp  SpiritTrack.h  Track.cpp  Track.h
spirit-sensor-gateway/dummy/: DummyClass.cpp  DummyClass.h
spirit-sensor-gateway/message-translation/: AWLMessageToSpiritMessageTranslationStrategy.cpp  AWLMessageToSpiritMessageTranslationStrategy.h  MessageTranslationStrategy.hpp  MessageTranslator.hpp  UnknownMessageException.cpp  UnknownMessageException.h
spirit-sensor-gateway/protocol-translation/: AWLMessageToSpiritMessageTranslationStrategy.cpp  AWLMessageToSpiritMessageTranslationStrategy.h  MessageTranslationStrategy.hpp  MessageTranslator.hpp
spirit-sensor-gateway/protocol-wrapper/: KvaserCanClass.cpp  KvaserCanClass.h
spirit-sensor-gateway/sensor-communication/: CommunicationProtocolStrategy.hpp  KvaserCanCommunicationStrategy.cpp  KvaserCanCommunicationStrategy.h  KvaserCanProtocolStrategy.cpp  KvaserCanProtocolStrategy.h  SensorCommunicationStrategy.hpp  SensorCommunicator.h  SensorCommunicator.hpp
spirit-sensor-gateway/server-communication/: JsonConverter.cpp  JsonConverter.h  JsonParser.cpp  JsonParser.h  ServerCommunicationProtocolStrategy.hpp  ServerCommunicationStrategy.hpp  ServerCommunicator.hpp  UWSServerCommunicationStrategy.cpp  UWSServerCommunicationStrategy.h  WebSocketServerCommunicationStrategy.cpp  WebSocketServerCommunicationStrategy.h
spirit-sensor-gateway/server-communication-protocol-strategy/: ServerCommunicationProtocolStrategy.hpp  ServerCommunicator.hpp  WebSocketServerCommunicationStrategy.cpp  WebSocketServerCommunicationStrategy.h
spirit-sensor-gateway/spirit-protocol/: AWLMessageTranslation.cpp  AWLMessageTranslation.h  AWLMessageTranslator.cpp  AWLMessageTranslator.h  MessageTranslation.h
spirit-sensor-gateway/spirit-protocol-translation/: AWLMessageToSpiritMessageTranslationStrategy.cpp  AWLMessageToSpiritMessageTranslationStrategy.h  AWLMessageTranslator.cpp  AWLMessageTranslator.h  MessageTranslationStrategy.hpp  SpiritFrame.cpp  SpiritFrame.h  SpiritFrameBuilder.h  SpiritFrameBuildercpp  SpiritPixel.cpp  SpiritPixel.h  SpiritProtocol.h  SpiritTrack.cpp  SpiritTrack.h  SystemErrorMessages.h  TranslatorProtocolStrategy.hpp  UnknownMessageException.cpp  UnknownMessageException.h
test/: CMakeLists.txt
test/acceptance-test/: CMakeLists.txt
test/manual-test/: CMakeLists.txt
(+377 files in other folders)
